--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -7,32 +7,32 @@
       <div class="form-body p-4">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "end_users/shared/error_messages", resource: resource %>
-          <div class="input-group mb-3 mt-4">
+          <div class="field mb-3 mt-4">
             <%= f.text_field :name, class:"form-control", autofocus: true, autocomplete: "name", placeholder:"名前" %>
           </div>
-          <div class="input-group mt-4">
+          <div class="field mt-4">
             <%= f.email_field :email, class:"form-control", autofocus: true, autocomplete: "email", placeholder:"Email" %>
           </div>
-          <div class="input-group mt-4">
+          <div class="field mt-4">
             <% if @minimum_password_length %>
               <em><% @minimum_password_length %></em>
             <% end %>
             <%= f.password_field :password, class:"form-control", autocomplete: "current-password", placeholder:"パスワード 6文字以上" %>
           </div>
-          <div class="input-group mt-4">
+          <div class="field mt-4">
             <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "new-password", placeholder:"パスワード（確認用）" %>
           </div>
           <% if devise_mapping.rememberable? %>
           <div class="field">
             <%= f.check_box :remember_me %>
-            <%= f.label :remember_me %>
+            <%= f.label "入力内容を保存しますか?" %>
           </div>
           <div>
             <%= render "end_users/shared/links" %>
           </div>
           <% end %>
           <div class="actions mb-4 float-right">
-            <%= f.submit "Sign up" %>
+            <%= f.submit "新規登録" %>
           </div>
         <% end %>
       </div>
