--- a/app/assets/stylesheets/public/topics.scss
+++ b/app/assets/stylesheets/public/topics.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the public/topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tag{
+  background-color: #00BFFF;
+  font-weight: 500;
+  display: inline;
+  padding: .2em .6em .3em;
+  font-size: 75%;
+  font-weight: bold;
+  line-height: 1;
+  color: #FFFFFF;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25em;
+}
