--- a/app/views/producer/topics/index.html.erb
+++ b/app/views/producer/topics/index.html.erb
@@ -1,7 +1,7 @@
 <div class="card-list-containar py-5">
   <% @topics.each do |topic| %>
     <div class="card w-50 mx-auto mt-4 shadow-lg">
-      <%= link_to producer_topic_path(topic) do %>
+      <%= link_to producer_farmer_topic_path(current_farmer, topic) do %>
         <%= attachment_image_tag topic, :topic_image, class:"card-img-top"; %>
       <% end %>
       <div class="card-body">
@@ -10,20 +10,23 @@
             <%= attachment_image_tag topic.farmer, :profile_image, :fill, 60, 60, fallback: "no_image.jpeg", class:"mt-3 rounded-circle"; %>
           </div>
           <div class="col-10">
-            <p class="card-title">
-              <%= link_to(producer_topic_path(topic), class:"text-dark") do %>
+            <% topic.tags.each do |tag| %>
+              <span class="tag"><%= tag.name %></span>
+            <% end %>
+            <p class="card-title mt-3">
+              <%= link_to(producer_farmer_topic_path(current_farmer, topic), class:"text-dark") do %>
                 <strong><%= topic.title %></strong>
               <% end %>
             </p>
             <p class="card-text">説明:<%= topic.body %></p>
             <span>By <%= topic.farmer.farm_name %></span>
             <span>
-              <%= link_to(producer_topic_path(topic.id), class:"text-dark") do %>
+              <%= link_to(producer_farmer_topic_path(current_farmer, topic.id), class:"text-dark") do %>
                 <i class="fas fa-comments"></i> <%= topic.topic_comments.count %>
               <% end %> |
             </span>
             <span>
-              <%= link_to(producer_topic_path(topic.id), class:"text-dark") do %>
+              <%= link_to(producer_farmer_topic_path(current_farmer, topic.id), class:"text-dark") do %>
                 <i class="fas fa-heart"></i> <%= topic.favorites.count %>
               <% end %>
           </div>
