--- a/app/views/producer/topics/new.html.erb
+++ b/app/views/producer/topics/new.html.erb
@@ -11,7 +11,7 @@
             <% end %>
           <% end %>
         </ul>
-        <%= form_with model: @topic, url: producer_topics_path, method: :post, local:true do |f| %>
+        <%= form_with model: @topic, url: producer_farmer_topics_path(current_farmer), method: :post, local:true do |f| %>
           <%= f.attachment_field :topic_image, class: "w-100 mt-3" %>
           <div class="input-group mb-3 mt-4">
             <div class="input-group-prepend">
