--- a/app/views/producer/topics/show.html.erb
+++ b/app/views/producer/topics/show.html.erb
@@ -4,11 +4,14 @@
     <div class="card-body">
       <div class="row">
         <div class="col-2">
-          <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 80, 80, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+          <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 130, 130, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
         </div>
         <div class="col-10">
-          <p class="card-title">
-            <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
+          <% @topic.tags.each do |tag| %>
+            <span class="tag"><%= tag.name %></span>
+          <% end %>
+          <p class="card-title mt-3">
+            <%= link_to(producer_farmer_topic_path(@topic), class: "text-dark") do %>
               <strong><%= @topic.title %></strong>
             <% end %>
           </p>
@@ -17,7 +20,7 @@
           <span> <%= @topic.created_at.strftime('%Y年%m月%d日%H時%M分') %> | </span>
           <span><i class="fas fa-comments"></i> <%= @topic.topic_comments.count %> | </span>
           <span><i class="fas fa-heart"></i> <%= @topic.favorites.count %> | </span>
-          <span><%= link_to "この投稿を削除する", producer_topic_path(@topic), method: :delete,  "data-confirm" => "本当に削除しますか?" %></span>
+          <span><%= link_to "この投稿を削除する", producer_farmer_topic_path(@topic), method: :delete,  "data-confirm" => "本当に削除しますか?" %></span>
         </div>
       </div>
       <hr>  
