--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -10,7 +10,10 @@
             <%= attachment_image_tag topic.farmer, :profile_image, :fill, 60, 60, fallback: "no_image.jpeg", class:"mt-3 rounded-circle"; %>
           </div>
           <div class="col-10">
-            <p class="card-title">
+            <% topic.tags.each do |tag| %>
+              <span class="tag"><%= tag.name %></span>
+            <% end %>
+            <p class="card-title mt-3">
               <%= link_to(public_topic_path(topic), class:"text-dark") do %>
                 <strong><%= topic.title %></strong>
               <% end %>
