--- a/app/views/public/topics/show.html.erb
+++ b/app/views/public/topics/show.html.erb
@@ -8,8 +8,11 @@
             <%= attachment_image_tag @topic.farmer, :profile_image, :fill, 100, 100, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
           </div>
           <div class="col-10">
+            <% @topic.tags.each do |tag| %>
+              <span class="tag"><%= tag.name %></span>
+            <% end %>
             <div id="topic_<%= @topic.id %>">
-              <p class="card-title">
+              <p class="card-title mt-3">
                 <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
                   <strong><%= @topic.title %></strong>
                 <% end %>
