--- a/app/views/public/topics/show.html.erb
+++ b/app/views/public/topics/show.html.erb
@@ -13,7 +13,7 @@
             <% end %>
             <div id="topic_<%= @topic.id %>">
               <p class="card-title mt-3">
-                <%= link_to(producer_topic_path(@topic), class: "text-dark") do %>
+                <%= link_to(producer_farmer_topic_path(@topic), class: "text-dark") do %>
                   <strong><%= @topic.title %></strong>
                 <% end %>
               </p>
