--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -27,7 +27,11 @@
             </span>
             <span>
               <%= link_to(public_topic_path(topic.id), class:"text-dark") do %>
-                <i class="fas fa-heart"></i> <%= topic.favorites.count %>
+                <% if topic.favorited_by?(current_end_user) %>
+                  <i class="fas fa-heart" style="color: red;"></i> <%= topic.favorites.count %>
+                <% else %>
+                  <i class="fas fa-heart"></i> <%= topic.favorites.count %>
+                <% end %>
               <% end %>
             </span>
           </div>
