--- a/app/views/producer/topics/new.html.erb
+++ b/app/views/producer/topics/new.html.erb
@@ -3,26 +3,7 @@
     <div class="col-lg-5 mx-auto shadow-lg rouded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">投稿フォーム</h5>
       <div class="form-body p-4">
-        <ul>
-          <% if @topic.errors.any? %>
-            <%= @topic.errors.count %>件のエラーが発生しました。</br>
-            <% @topic.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          <% end %>
-        </ul>
-        <%= form_with model: @topic, url: producer_farmer_topics_path(current_farmer), method: :post, local:true do |f| %>
-          <%= f.attachment_field :topic_image, class: "w-100 mt-3" %>
-          <div class="input-group mb-3 mt-4">
-            <div class="input-group-prepend">
-              <span class="input-group-text" aria-hidden="true"><i class="fas fa-tractor"></i></span>
-            </div>
-            <%= f.text_field :title, class:"form-control", placeholder:"タイトル" %>
-          </div>
-          <%= f.text_area :body, class:"form-control", rows:"3", placeholder:"本文" %>
-          <hr>
-          <%= f.submit "投稿", class: "btn btn-lg btn-block btn-info mt-4" %>
-        <% end %>
+        <%= render 'producer/topics/form', topic: @topic %>
       </div>
     </div>
   </div>
